--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+html,body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+/* --------- img -------- */
+img{
+    width: 18px;
+}
 li{
     user-select: none;
 }
