--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,64 @@
 html,body{
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
 }
+
+body{
+    height: 100%;
+}
+p{
+    margin: 0;
+    padding: 0;
+}
+/* ----------- coin-container, coin --------- */
+
+.coin-container{
+    padding: 2em;
+}
+
+.coin{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+    border-bottom: 1px solid gray ;
+}
+
+.categories{
+    display: flex;
+    justify-content: space-between;
+    /* border: 2px solid red; */
+    width: 63%;
+}
+
+.categories p{
+    width: 15%;
+}
+
+.img-name-symbol, .c-category{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid green; */
+    width: 25%;
+}
+
+.c-category{
+    display: flex;
+    justify-content: center;
+}
+
+
 
 /* --------- img -------- */
 img{
-    width: 18px;
+    width: 20px;
+    height: 20px;
+    margin: 0 1em;
+    margin-bottom: 3px;
+    /* border: 2px solid red; */
 }
+
 li{
     user-select: none;
 }
