--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,45 @@ html,body{
 
 body{
     height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
+
 p{
     margin: 0;
     padding: 0;
 }
+
+li{
+    user-select: none;
+}
+
 /* ----------- coin-container, coin --------- */
 
 .coin-container{
     padding: 2em;
+    font-size: 0.9rem;
+    margin: 1em;
 }
 
 .coin{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1em;
-    border-bottom: 1px solid gray ;
+    padding: 1em 0em;
+    border-top: 1px solid rgb(231, 228, 228);
 }
+
+.coin-name{
+    font-weight: bold;
+    /* border: 2px solid red; */
+}
+
+.coin-symbol{
+    text-transform: uppercase;
+    font-size: 0.75rem;
+}
+
+/* --------- for price, 24max, 24h min etc. ----------- */
 
 .categories{
     display: flex;
@@ -50,15 +71,11 @@ p{
 
 
 
-/* --------- img -------- */
+/* --------- coin img -------- */
 img{
     width: 20px;
     height: 20px;
-    margin: 0 1em;
-    margin-bottom: 3px;
+    margin: 0 1.2em;
+    margin-bottom: 2.5px;
     /* border: 2px solid red; */
-}
-
-li{
-    user-select: none;
 }
